feat: add more match links

--- a/tutorials/reading-time/manifest.json
+++ b/tutorials/reading-time/manifest.json
@@ -6,7 +6,12 @@
   "content_scripts": [
     {
       "js": ["scripts/content.js"],
-      "matches": ["https://developer.chrome.com/docs/extensions/*", "https://developer.chrome.com/docs/webstore/*"]
+      "matches": [
+        "https://developer.chrome.com/docs/extensions/*",
+        "https://developer.chrome.com/docs/webstore/*",
+        "https://developer.chrome.com/docs/devtools/*",
+        "https://developer.chrome.com/docs/workbox/*"
+      ]
     }
   ]
 }
