--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Eduardo Hilário <48762158+eduardohilariodev@users.noreply.github.com>",
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "chrome-types": "^0.1.252",
     "eslint": "^8.56.0",
     "typescript": "^5.3.3"
