--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,5 @@
   "manifest_version": 3,
   "name": "CRXJS React Vite Example",
   "version": "1.0.0",
-  "action": { "default_popup": "index.html" }
+  "action": { "default_popup": "dist/index.html" }
 }
