--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,6 @@
   "manifest_version": 3,
   "name": "CRXJS React Vite Example",
   "version": "1.0.0",
-  "action": { "default_popup": "src/index.html" },
+  "action": { "default_popup": "index.html" },
   "background": { "service_worker": "src/background/script.ts", "type": "module" }
 }
