--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
     "vite": "^5.0.0",
     "vite-plugin-web-extension": "^4.0.0",
     "webextension-polyfill": "^0.10.0"
-  }
+  },
+  "packageManager": "yarn@4.1.0"
 }
