--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,7 @@
 {
-  "{{chrome}}.manifest_version": 3,
-  "{{firefox}}.manifest_version": 2,
+  "name": "Awesome Extension Manager",
+  "version": "1.0.0",
+  "manifest_version": 3,
   "icons": {
     "16": "icon/16.png",
     "32": "icon/32.png",
@@ -8,14 +9,11 @@
     "96": "icon/96.png",
     "128": "icon/128.png"
   },
-  "{{chrome}}.action": {
+  "action": {
     "default_popup": "src/popup.html"
   },
-  "{{firefox}}.browser_action": {
-    "default_popup": "src/popup.html"
-  },
+  "permissions": ["management"],
   "background": {
-    "{{chrome}}.service_worker": "src/background.ts",
-    "{{firefox}}.scripts": ["src/background.ts"]
+    "service_worker": "src/background.ts"
   }
 }
